--- a/TriviaSocketIo/src/Home/styles/StyleHeaderHome.css
+++ b/TriviaSocketIo/src/Home/styles/StyleHeaderHome.css
@@ -1,5 +1,5 @@
 .site-header-home {
-  background-color: #4FC4CF;
+  background-color: teal;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   padding: 20px 0;
   position: fixed;
