--- a/TriviaSocketIo/src/Home/styles/StylesReglas.css
+++ b/TriviaSocketIo/src/Home/styles/StylesReglas.css
@@ -28,7 +28,7 @@
 .about-text-home h3 {
   font-size: 26px;
   margin-bottom: 10px;
-  color: #6C2CF5;
+  color: teal;
 }
 
 .p-home {
@@ -38,7 +38,7 @@
 }
 
 .h3-home {
-  color: #6C2CF5;
+  color: teal;
   font-size: 24px;
 }
 
@@ -65,7 +65,7 @@
   align-items: center;
   justify-content: center;
   margin-right: 15px;
-  color: #6C2CF5;
+  color: teal;
   font-size: 18px;
   flex-shrink: 0;
 }
@@ -75,7 +75,7 @@
   text-align: center; /* centramos el título */
   margin-bottom: 50px;
   padding-bottom: 10px;
-  color: #6C2CF5;
+  color: teal;
   position: relative;
 }
 
@@ -87,7 +87,7 @@
   transform: translateX(-50%);
   width: 80px;
   height: 3px;
-  background-color: #6C2CF5;
+  background-color: teal;
   border-radius: 2px;
 }
 
