--- a/TriviaSocketIo/src/Home/styles/StylesSlider.css
+++ b/TriviaSocketIo/src/Home/styles/StylesSlider.css
@@ -109,7 +109,7 @@
 .hero-control-home {
   width: 50px;
   height: 50px;
-  background-color: #994FF3;
+  background-color: teal;
   border: none;
   color: white;
   font-size: 24px;
@@ -123,7 +123,7 @@
 
 .hero-control-home:hover {
   background-color: white;
-  color: #994FF3;
+  color: teal;
 }
 
 /* Responsive Styles */
